Update the docs

--- a/docs/pages/getting-started.mdx
+++ b/docs/pages/getting-started.mdx
@@ -310,9 +310,7 @@ with collection.batch_add() as batch:
 ## 🆘 Support & Resources
 
 - 🐛 [Report Issues](https://github.com/superagenticai/agentvectordb/issues)
-- 📚 [Documentation](https://agentvectordb.readthedocs.io/)
-- 💬 [Community Discussions](https://github.com/superagenticai/agentvectordb/discussions)
-- 📧 [Contact Support](mailto:support@example.com)
+- 📧 [Contact Support](mailto:support@super-agentic.ai)
 
 ## 🤝 Contributing
 
