Use short form AVDB

--- a/docs/pages/about.mdx
+++ b/docs/pages/about.mdx
@@ -1,11 +1,11 @@
-# ℹ️ About AgentVectorDB
+# ℹ️ About AgentVectorDB (AVDB)
 
 ## Overview
-AgentVectorDB is a flagship open-source project by [Superagentic AI](https://super-agentic.ai), designed to revolutionize how AI agents store, retrieve, and manage their cognitive states. Built as a specialized layer on top of LanceDB, it provides optimized memory management capabilities specifically for AI agents.
+AgentVectorDB (AVDB) is a flagship open-source project by [Superagentic AI](https://super-agentic.ai), designed to revolutionize how AI agents store, retrieve, and manage their cognitive states. Built as a specialized layer on top of LanceDB, it provides optimized memory management capabilities specifically for AI agents.
 
 <div className="info-box">
   <h3>💡 Built on LanceDB</h3>
-  <p>AgentVectorDB is not a competitor to LanceDB, but rather extends its capabilities for AI agent use cases. We share the same Apache 2.0 license and build upon LanceDB's robust foundation.</p>
+  <p>AgentVectorDB (AVDB) is not a competitor to LanceDB, but rather extends its capabilities for AI agent use cases. We share the same Apache 2.0 license and build upon LanceDB's robust foundation.</p>
 </div>
 
 ## About Superagentic AI
