--- a/docs/pages/examples.mdx
+++ b/docs/pages/examples.mdx
@@ -1,11 +1,11 @@
 # 🧪 Examples
 
-This page provides practical examples of using AgentVectorDB in different scenarios. Each example is designed to demonstrate specific features and common use cases.
+This page provides practical examples of using AgentVectorDB (AVDB) in different scenarios. Each example is designed to demonstrate specific features and common use cases.
 
 ## Basic Usage Examples
 
 ### Quick Start
-This example demonstrates the fundamental setup and usage of AgentVectorDB. It shows how to initialize the store, create a collection, and perform basic operations. This pattern is useful for applications that need simple memory storage and retrieval, such as chatbots or personal assistants.
+This example demonstrates the fundamental setup and usage of AgentVectorDB (AVDB). It shows how to initialize the store, create a collection, and perform basic operations. This pattern is useful for applications that need simple memory storage and retrieval, such as chatbots or personal assistants.
 
 Key concepts covered:
 - Store initialization
