--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -1,9 +1,9 @@
 # ❓ Frequently Asked Questions
 
-## About AgentVectorDB
+## About AgentVectorDB (AVDB)
 
 ### What is AgentVectorDB?
-AgentVectorDB is a specialized vector database designed for AI agents, developed by [Superagentic AI](https://super-agentic.ai). It provides:
+AgentVectorDB (AVDB) is a specialized vector database designed for AI agents, developed by [Superagentic AI](https://super-agentic.ai). It provides:
 - Efficient memory storage and retrieval
 - Semantic search capabilities
 - Async/sync API support
@@ -18,7 +18,7 @@ AgentVectorDB is a specialized vector database designed for AI agents, developed
 - **Easy to use**: Simple, intuitive API
 
 ### Relationship with LanceDB
-AgentVectorDB is built on top of LanceDB and shares the same Apache 2.0 license. It's not a competitor but rather a specialized layer adding agent-specific features while leveraging LanceDB's robust vector database capabilities.
+AgentVectorDB (AVDB) is built on top of LanceDB and shares the same Apache 2.0 license. It's not a competitor but rather a specialized layer adding agent-specific features while leveraging LanceDB's robust vector database capabilities.
 
 ## Technical Implementation
 
