--- a/docs/pages/getting-started.mdx
+++ b/docs/pages/getting-started.mdx
@@ -1,6 +1,6 @@
-# 🚀 Getting Started with AgentVectorDB
+# 🚀 Getting Started with AgentVectorDB (AVDB)
 
-AgentVectorDB is a specialized vector database designed for AI agents, built on LanceDB. This guide will help you set up and start using AgentVectorDB in your projects.
+AgentVectorDB (AVDB) is a specialized vector database designed for AI agents, built on LanceDB. This guide will help you set up and start using AgentVectorDB in your projects.
 
 ## 🎯 Key Features
 
