--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -1,4 +1,4 @@
-# 🧠 AgentVectorDB
+# 🧠 AgentVectorDB (AVDB)
 
 [![PyPI version](https://badge.fury.io/py/agentvectordb.svg)](https://badge.fury.io/py/agentvectordb)
 [![License](https://img.shields.io/badge/License-Apache%202.0-blue.svg)](LICENSE)
@@ -8,7 +8,7 @@
 
 ## 🌟 Overview
 
-AgentVectorDB is a specialized memory management system developed by [Superagentic AI](https://super-agentic.ai). Built on top of LanceDB's powerful vector database capabilities, it provides optimized cognitive architecture for AI agents.
+AgentVectorDB (AVDB) is a specialized memory management system developed by [Superagentic AI](https://super-agentic.ai). Built on top of LanceDB's powerful vector database capabilities, it provides optimized cognitive architecture for AI agents.
 
 ## 🤝 Built with LanceDB
 
